# babyphone-av-bridge

./: CMakeLists.txt  README.md  gen_monitor_replies.py  gen_web_assets.py  install-hook.sh  uninstall-hook.sh
docs/superpowers/plans/: 2026-06-14-av-bridge.md
docs/superpowers/specs/: 2026-06-14-av-bridge-design.md
hook/: hook.c
reference/: babycam_client.py  babycam_protocol_spec.md
src/: frame.cpp  frame.h  http.cpp  http.h  main.cpp  media.cpp  media.h  monitor_emulator.cpp  monitor_emulator.h  monitor_replies.h  pcap.cpp  pcap.h  relay.cpp  relay.h  server.cpp  server.h  stream_hub.cpp  stream_hub.h  web_assets.h  websocket.cpp  websocket.h
test-fixtures/: babyphone_boot.pcap  babyphone_monitor.pcap
tests/: emulator_test.cpp  frame_test.cpp  http_test.cpp  hub_test.cpp  media_test.cpp  smoke_test.cpp  ws_test.cpp
tools/: fake_monitor.cpp  fake_ppsapp.cpp  ws_probe.cpp
web/: app.js  index.html
